fix: align API immutability and formatting
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>