@@ -2,8 +2,6 @@ package io.github.hellices.agentframework.api.agent;
 
 import io.github.hellices.agentframework.api.message.Message;
 import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -25,27 +23,32 @@ public final class AgentRunRequest {
     List<Message> normalizedMessages = new ArrayList<>();
     if (messages != null) {
       for (Message message : messages) {
-        normalizedMessages.add(Objects.requireNonNull(message, "messages must not contain null entries"));
+        normalizedMessages.add(
+            Objects.requireNonNull(message, "messages must not contain null entries"));
       }
     }
-    this.messages = Collections.unmodifiableList(normalizedMessages);
+    this.messages = List.copyOf(normalizedMessages);
     this.sessionId = sessionId;
     this.options = options == null ? new AgentRunOptions() : options;
-    this.cancellationSignal = cancellationSignal == null ? new CancellationSignal() : cancellationSignal;
-    this.attributes = attributes == null ? Map.of() : Collections.unmodifiableMap(new HashMap<>(attributes));
+    this.cancellationSignal =
+        cancellationSignal == null ? new CancellationSignal() : cancellationSignal;
+    this.attributes = attributes == null ? Map.of() : Map.copyOf(attributes);
   }
 
   public static AgentRunRequest empty() {
-    return new AgentRunRequest(List.of(), null, new AgentRunOptions(), new CancellationSignal(), Map.of());
+    return new AgentRunRequest(
+        List.of(), null, new AgentRunOptions(), new CancellationSignal(), Map.of());
   }
 
   public static AgentRunRequest of(String input) {
     Objects.requireNonNull(input, "input must not be null");
-    return new AgentRunRequest(Message.normalize(input), null, new AgentRunOptions(), new CancellationSignal(), Map.of());
+    return new AgentRunRequest(
+        Message.normalize(input), null, new AgentRunOptions(), new CancellationSignal(), Map.of());
   }
 
   public static AgentRunRequest of(List<? extends Message> messages) {
-    return new AgentRunRequest(messages, null, new AgentRunOptions(), new CancellationSignal(), Map.of());
+    return new AgentRunRequest(
+        messages, null, new AgentRunOptions(), new CancellationSignal(), Map.of());
   }
 
   public List<Message> messages() {
